update our team header

--- a/html/flex-it/pages/teamMember/team-member.html
+++ b/html/flex-it/pages/teamMember/team-member.html
@@ -35,17 +35,17 @@
         
         <!-- main-LTR -->
         <link rel="stylesheet" href="../../css/main-LTR.css">
-        <title> flex-IT   |   team member</title>
+        <title> flex-IT   |   Портфолио</title>
   </head>
   <body class=" dark-theme "> 
     <!--Start Page Header-->
-    <header class=" page-header   inner-page-header header-basic" id="page-header">
+    <header class=" page-header   content-always-light header-basic" id="page-header">
       <div class="header-search-box">
         <div class="close-search"></div>
         <form class="nav-search search-form" role="search" method="get" action="#">
-          <div class="search-wrapper"> 
-            <label class="search-lbl">Search for:</label>
-            <input class="search-input" type="search" placeholder="Search..." name="searchInput" autofocus="autofocus">
+          <div class="search-wrapper">
+            <label class="search-lbl">Поиск</label>
+            <input class="search-input" type="search" placeholder="Поиск..." name="searchInput" autofocus="autofocus">
             <button class="search-btn" type="submit"><i class="bi bi-search icon"></i></button>
           </div>
         </form>
@@ -55,49 +55,12 @@
           <div class="header-logo"><a class="logo-link" href="#"><img class="logo-img light-logo" loading="lazy" src="../../assets/images/logo/logo-light.png" alt="logo"><img class="logo-img  dark-logo" loading="lazy" src="../../assets/images/logo/logo-dark.png" alt="logo"></a></div>
           <div class="links menu-wrapper ">
             <ul class="list-js links-list">
-              <li class="menu-item has-sub-menu"><a class="menu-link  " href="#0">home <i class="fas fa-plus  plus-icon"> </i></a>
-                <ul class="sub-menu ">
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="team-member.html">home 1</a></li>
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="../home/home-2.html">home 2</a></li>
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="../home/home-3.html">home 3</a></li>
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="../home/home-4.html">home 4</a></li>
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="../home/home-5.html">home 5 [ Slider ]</a></li>
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="../home/home-6.html">home 6 [ video ]</a></li>
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="../home/home-rtl.html">home [ RTL languages ]</a></li>
-                </ul>
-              </li>
-              <li class="menu-item"><a class="menu-link  " href="../aboutUs/about-us.html">about us </a></li>
-              <li class="menu-item has-sub-menu"><a class="menu-link  " href="#0">services<i class="fas fa-plus  plus-icon"> </i></a>
-                <ul class="sub-menu ">
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="../service/services.html">services</a></li>
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="../service/service-single.html">service single</a></li>
-                </ul>
-              </li>
-              <li class="menu-item has-sub-menu"><a class="menu-link  " href="#0">portfolio <i class="fas fa-plus  plus-icon"> </i></a>
-                <ul class="sub-menu ">
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="../portfolio/portfolio-grid.html">portfolio grid</a></li>
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="../portfolio/portfolio-slider.html">portfolio slider</a></li>
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="../portfolio/portfolio-single.html">portfolio single</a></li>
-                </ul>
-              </li>
-              <li class="menu-item has-sub-menu"><a class="menu-link  " href="#0">blog<i class="fas fa-plus  plus-icon"> </i></a>
-                <ul class="sub-menu ">
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="../blog/blog-home-1-col.html">blog home 1 colmun</a></li>
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="../blog/blog-home-2-col.html">blog home 2 columns</a></li>
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="../blog/blog-home-3-col.html">blog home 3 columns</a></li>
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="../posts/post-single.html">single post</a></li>
-                </ul>
-              </li>
-              <li class="menu-item has-sub-menu"><a class="menu-link  " href="#0">pages<i class="fas fa-plus  plus-icon"> </i></a>
-                <ul class="sub-menu ">
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="../posts/pricing.html">pricing plans</a></li>
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="our-team.html">our team</a></li>
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link   active" href="team-member.html">team member</a></li>
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="../faq/faq.html">FAQ</a></li>
-                  <li class="menu-item sub-menu-item"><a class="menu-link sub-menu-link  " href="../errors/404.html">404 page</a></li>
-                </ul>
-              </li>
-              <li class="menu-item"><a class="menu-link  " href="../contactUs/contact-us.html">contact us </a></li>
+              <li class="menu-item has-sub-menu"><a class="menu-link   " href="../home/home-5.html">Главная <i class="fas fa-plus  plus-icon"> </i></a></li>
+              <li class="menu-item has-sub-menu"><a class="menu-link" href="../service/service-single-argoTech.html">Заказная работа <i class="fas fa-plus  plus-icon"> </i></a></li>
+              <li class="menu-item has-sub-menu"><a class="menu-link" href="../branch/service-single-finance.html">Отрасли <i class="fas fa-plus  plus-icon"> </i></a></li>
+              <li class="menu-item has-sub-menu"><a class="menu-link" href="../solutions/service-single-1.html">Готовые решения<i class="fas fa-plus  plus-icon"> </i></a></li>
+              <li class="menu-item"><a class="menu-link  active" href="../aboutUs/about-us.html">О компании </a></li>
+              <li class="menu-item has-sub-menu"><a class="menu-link  " href="../portfolio/portfolio-grid.html">Портфолио <i class="fas fa-plus  plus-icon"> </i></a></li>
             </ul>
           </div>
           <div class="controls-box">
