--- a/html/flex-it/pages/teamMember/our-team.html
+++ b/html/flex-it/pages/teamMember/our-team.html
@@ -55,13 +55,12 @@
           <div class="header-logo"><a class="logo-link" href="#"><img class="logo-img light-logo" loading="lazy" src="../../assets/images/logo/logo-light.png" alt="logo"><img class="logo-img  dark-logo" loading="lazy" src="../../assets/images/logo/logo-dark.png" alt="logo"></a></div>
           <div class="links menu-wrapper ">
             <ul class="list-js links-list">
-              <li class="menu-item has-sub-menu"><a class="menu-link   active" href="../home/home-5.html">Главная <i class="fas fa-plus  plus-icon"> </i></a>
-              </li>
-              <li class="menu-item"><a class="menu-link  " href="../aboutUs/about-us.html">О нас </a></li>
-              <li class="menu-item has-sub-menu"><a class="menu-link  " href="../service/services.html">Услуги<i class="fas fa-plus  plus-icon"> </i></a>
-              </li>
-              <li class="menu-item has-sub-menu"><a class="menu-link  " href="../portfolio/portfolio-grid.html">Портфолио <i class="fas fa-plus  plus-icon"> </i></a>
-              </li>
+              <li class="menu-item has-sub-menu"><a class="menu-link   " href="../home/home-5.html">Главная <i class="fas fa-plus  plus-icon"> </i></a></li>
+              <li class="menu-item has-sub-menu"><a class="menu-link" href="../service/service-single-argoTech.html">Заказная работа <i class="fas fa-plus  plus-icon"> </i></a></li>
+              <li class="menu-item has-sub-menu"><a class="menu-link" href="../branch/service-single-finance.html">Отрасли <i class="fas fa-plus  plus-icon"> </i></a></li>
+              <li class="menu-item has-sub-menu"><a class="menu-link" href="../solutions/service-single-1.html">Готовые решения<i class="fas fa-plus  plus-icon"> </i></a></li>
+              <li class="menu-item"><a class="menu-link  active" href="../aboutUs/about-us.html">О компании </a></li>
+              <li class="menu-item has-sub-menu"><a class="menu-link  " href="../portfolio/portfolio-grid.html">Портфолио <i class="fas fa-plus  plus-icon"> </i></a></li>
             </ul>
           </div>
           <div class="controls-box">
